@@ -4,5 +4,6 @@ public enum ActionType {
     CRAFT,
     OPEN_CHEST,
     PICKUP_ITEM,
-    DROP_ITEM;
+    DROP_ITEM,
+    RESPAWN;
 };
