@@ -14,7 +14,7 @@
 # Lore: List one or more lines of lore here
 #
 # Actions: The actions when the item should be soulbound to the player.
-# Valid values are: CRAFT, OPEN_CHEST, PICKUP_ITEM, DROP_ITEM
+# Valid values are: CRAFT, OPEN_CHEST, PICKUP_ITEM, DROP_ITEM, RESPAWN
 #
 #
 ###
